src/main/resources/static/css/aboutUs.css
#our-team-section {
    margin-top: 5%;
    width: 100%;
    /*background-color: white;*/
    position: absolute;
    z-index: 5;
    padding-bottom: 25%;
}

#our-team-title {
    position: relative;
    font-weight: 300;
    margin-top: -9.5%;
    margin-left: 37%;
    font-size: 4vw;
    color: black;
}

#team-tile-container {
    width: 90%;
    margin-left: 5%;
    /*flex-wrap: wrap;*/
    /*display: flex;*/
    /*justify-content: center;*/
}

#team-right-tile {
    float: right;
    margin-top: -58.5%;
    margin-right: 10%;
}

#team-btm-right-tile {
    float: right;
    margin-top: -58.6%;
    margin-right: 10%;
}

.team-headshot {
    width: 35%;
    margin-bottom: 45%;
    margin-left: .7%;
    border-radius: 50%;
}

.team-card {
    margin-top: 5%;
    margin-left: 10%;
    width: 35%;
    display: flex;
    /*flex-wrap: wrap;*/
    flex-direction: row;
    flex-basis: fit-content;
    justify-content: space-evenly;
    background-color: white;
    padding-bottom: 27.5%;
    border-top: solid 5px;
    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
}

.team-card > * {
    padding: 1rem;
}

.team-name-banner {
    position: absolute;
    width: 20%;
    margin-left: 1.5%;
    margin-top: 12.5%;
    text-align: center;
    padding-top: 1%;
    padding-bottom: 1%;
    font-weight: 400;
    font-size: 2.4vw;
    color: black;
}

.email-container {
    margin-top: 250px;
    margin-left: 5%;
}

.team-title-banner {
    position: absolute;
    width: 20%;
    margin-left: 1.5%;
    margin-top: 15.5%;
    text-align: center;
    padding-top: 1%;
    padding-bottom: 1%;
    font-weight: 400;
    font-size: 1.8vw;
    color: grey;
}

.team-name-bio {
    position: absolute;
    width: 25%;
    margin-left: .5%;
    margin-top: 22%;
    font-weight: 300;
    font-size: 1.8vw;
    text-align: center;
    color: grey;
}

.team-social {
    position: absolute;
    width: 31.5%;
    /*background-color: white;*/
    color: grey;
    margin-left: -1.0%;
    margin-top: 17.5%;
    font-weight: 200;
    font-size: 1.8vw;
    padding-top: 1%;
    padding-bottom: 1%;
    text-align: center;
    padding-bottom: 5%;
    /*box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);*/
}

.fa {
    padding: 20px;
    font-size: 50px;
    width: 50px;
    text-align: center;
    text-decoration: none;
}

.fa:hover {
    opacity: 0.7;
}


/* CSS */
.button-53 {
    /*margin-top: 100px;*/
    background-color: #3DD1E7;
    border: 0 solid #E5E7EB;
    box-sizing: border-box;
    color: #000000;
    display: flex;
    font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    font-size: 1rem;
    font-weight: 700;
    justify-content: center;
    line-height: 1.75rem;
    padding: .75rem 1.65rem;
    position: relative;
    text-align: center;
    text-decoration: none #000000 solid;
    text-decoration-thickness: auto;
    width: 100%;
    max-width: 460px;
    position: relative;
    cursor: pointer;
    transform: rotate(-2deg);
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

.button-53:focus {
    outline: 0;
}

.button-53:after {
    content: '';
    /*margin-top: 100px;*/
    position: absolute;
    border: 1px solid #000000;
    bottom: 4px;
    left: 4px;
    width: calc(100% - 1px);
    height: calc(100% - 1px);
}

.button-53:hover:after {
    /*margin-top: 100px;*/
    bottom: 2px;
    left: 2px;
}

@media (min-width: 768px) {
    .button-53 {
        padding: .75rem 3rem;
        font-size: 1.25rem;
    }
}

